# mochiagent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: environment_variables.md
examples/: README.md  config_from_env.py  minimal_chat.py
src/agent/: __init__.py  base_agent.py  constants.py  context.py  framework.py  session.py  sub_agent.py  types.py
src/agent/config/: __init__.py  system.py  tools.py
src/agent/core/: _numeric.py  utils.py
src/agent/sandbox/: __init__.py  _path_checker.py  _schema_inspector.py  (+6 more)
tests/: conftest.py  test_agent_context.py  test_agent_specific_strategies.py  test_base_agent.py  test_compactor.py  test_compression_types.py  test_context_compactor_flow.py  test_core_utils.py  test_default_context_compactor.py  test_edit_file_tool.py  test_event_loop.py  test_event_loop_assistant_persistence.py  test_exec_tool.py  test_framework.py  test_framework_register_agent.py  test_framework_registration.py  test_list_dir_tool.py  test_llm_base.py  test_llm_errors.py  test_llm_provider.py  test_llm_turn_handler.py  test_mcp_config_loading.py  test_mcp_manager.py  test_mcp_tool_unavailable.py  test_memory_storage.py  test_message_bus.py  test_message_message.py  test_message_part.py  test_model_profiles.py  test_openai_adapter.py  test_openai_adapter_message_input.py  test_path_validation.py  test_prompt_loader.py  test_provider_registry_failfast.py  test_public_api.py  test_read_file_tool.py  test_redaction.py  test_result_postprocessor.py  test_session_context.py  test_session_context_profile_only.py  (+25 more)
(+82 files in other folders)
