[project]
name = "mochiagent"
version = "0.2.0"
description = "Async event-driven Agent framework with tool orchestration and MCP support"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Laelaps" },
]
keywords = ["agent", "llm", "mcp", "async", "tooling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.0",
    "jsonschema>=4.26.0",
    "loguru>=0.7.3",
    "mcp>=1.10.1",
    "openai>=2.15.0",
    "pydantic>=2.10.0",
    "python-frontmatter>=1.1.0",
    "transitions>=0.9.0",
    "typing-extensions>=4.12.0",
]

[project.urls]
Homepage = "https://github.com/Laelaps43/mochiagent"
Repository = "https://github.com/Laelaps43/mochiagent"
Issues = "https://github.com/Laelaps43/mochiagent/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "ruff>=0.14.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.basedpyright]
typeCheckingMode = "recommended"
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
]
